kubernetes/darkstar/apps/networking/envoy-gateway/config/internal/gateways.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-internal
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-internal
    namespace: networking
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy-internal
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.1.10.30
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.p.lan.starstreak.net"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "gateway-starstreak.net-tls"
